--- a/pepal-front/src/styles.scss
+++ b/pepal-front/src/styles.scss
@@ -1,1 +1,574 @@
-/* You can add global styles to this file, and also import other style files */
+/* general */
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Itim&family=Open+Sans&family=Pacifico&family=Roboto&display=swap');
+
+:root {
+  --orange-transparent: #ff821cc7;
+  --white: #FBFAFC;
+  --turquoise: #2FFFAD;
+  --violet: #845EC2;
+
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: 0;
+  vertical-align: baseline;
+  font-size: 100%;
+  font: inherit;
+}
+
+html, body {
+  line-height: 1;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-size: 0.875em;
+  letter-spacing: 0.063em;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ol, ul {
+  list-style: none;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.bgGradient {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.dark {
+  background-color: #26242E;
+}
+
+.gradient-blue {
+  background-image: linear-gradient(to right top, #6d327c, #485DA6, #00a1ba, #00BF98, #36C486);
+}
+
+.gradient-orange {
+  background-image: linear-gradient(to right top, #38438b, #944b94, #d75a88, #ff7e71, #ffb25f, #ffeb68);
+}
+
+.wrap, .wrap-outer {
+  width: calc(100vw-20px);
+  height: 100vh;
+  position: relative;
+  max-height: 100vh;
+}
+
+.header {
+  font-size: 1.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100px;
+  padding: 30px 8.33%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 5%;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
+.header a {
+  color : var(--white);
+}
+
+.logo{
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-align:center;
+  -ms-flex-align:center;
+  align-items:center;
+  padding:0px 10px 0px 0px;
+}
+
+.logo-text{
+  display:inline-block;
+  font-size:1.1em;
+  font-weight: 600;
+  position:relative;
+  text-shadow:1px 2px 0px rgba(137, 137, 153, 0.562);
+}
+
+.logo-text:after {
+  content: "Version 2.0";
+  position: absolute;
+  top: -25px;
+  right: -70px;
+  padding: 0.3em;
+  border-radius: 3px;
+  background-color: #FF7BDA;
+  font-size: 0.6em;
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  text-shadow:none;
+}
+
+.logo img{
+  height: 60px;
+  width: auto;
+  margin-right: 20px;
+  display:inline-block;
+  /* animation: rotate 3s infinite linear;
+  filter: blur(0.02em); */
+}
+
+.header nav ul li{
+  display:inline-block;
+  margin-left:20px;
+}
+
+.navbar {
+  padding-top: 5px;
+}
+
+nav ul li a{
+  letter-spacing:1.5px;
+  padding:3px 0;
+  position:relative;
+  display:inline-block;
+}
+
+.navbar ul li a:hover::after, .navbar ul li a:hover::before{
+  width:100%;
+  left:0;
+}
+
+.navbar ul li a::after, .navbar ul li a::before{
+  content:'';
+  position:absolute;
+  top:calc(100% + 5px);
+  width:0;
+  right:0;
+  height: 4px;
+}
+
+.navbar ul li a::before{
+  -webkit-transition:width .25s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
+  -o-transition:width .25s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
+  transition:width .25s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
+  background:var(--violet);
+}
+
+.navbar ul li a::after{
+  -webkit-transition:width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
+  -o-transition:width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
+  transition:width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
+  background:var(--turquoise);
+}
+
+.navbar ul li a.active:after{
+  background: var(--turquoise);
+  width:100%;
+  left:0;
+}
+
+.navbar ul li a.active:before{
+  z-index:2;
+}
+
+.notif {
+  background-color: #fa3e3e;
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  border-radius: 3px;
+  color: var(--white);
+
+  padding: 1px 3px;
+  font-size: 0.8em;
+
+  position: absolute;
+  top: -12px;
+  right: -12px;
+
+}
+
+.acces-rapide {
+  width: 800px;
+  max-width: 90vw;
+  border: 2px solid white;
+  margin: auto;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+}
+
+#btnDarkMode, #btnLightMode {
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  padding: 0.5em;
+  font-size: 1.3em;
+  border: 1px solid var(--white);
+  background-color: rgba(0, 0, 0, 0.315);
+  color: #fbfafcbe;
+  border-radius: 50%;
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  text-shadow:1px 2px 2px rgba(137, 137, 153, 0.562);
+
+}
+
+/* mobile-menu */
+
+.mobile-box {
+  position: fixed;
+  top: 35px;
+  right: 0;
+  z-index: 9;
+}
+
+.mobile-menu {
+  -webkit-transition: max-height 3s;
+  -o-transition: max-height 3s;
+  transition: max-height 3s;
+  overflow: hidden;
+  max-height: 400px;
+}
+
+.close-box, .mobile-button {
+  background-color: #00a1ba;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #fff;
+  text-align: center;
+  font-size: 1.4em;
+  line-height: 46px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0 30px;
+  z-index: 9;
+  -webkit-box-shadow: 3px 3px 5px 0px rgba(00,00,00,0.2);
+  box-shadow: 3px 3px 5px 0px rgba(00,00,00,0.2);
+  cursor: pointer;
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+  animation-name: bounce;
+  animation-duration: 0.7s;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+
+.mobile-menu nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  color: #00a1ba;
+  margin-top: 60px;
+  text-align: right;
+  margin-right: 20px;
+  padding-bottom: 20px;
+  animation: bounce 0.7s;
+}
+
+.mobile-menu nav ul li a {
+  margin-bottom: 10px;
+  color: var(--white);
+  font-size: 1.2em;
+  background: #00a1ba;
+  display: block;
+  border-radius: 25px;
+  margin-top: 10px;
+  line-height: 100%;
+  padding: 12px;
+  text-align: center;
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  -webkit-transition: all 0.1s;
+  -o-transition: all 0.1s;
+  transition: all 0.1s;
+  animation: slideInRight 0.7s forwards;
+}
+
+.mobile-menu nav ul li a .notif {
+  top: -5px;
+  right: 0;
+  font-size: 0.9em;
+}
+
+.mobile-menu nav ul li a:hover {
+  color: #fff;
+  box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0);
+}
+
+
+/* sign-in  */
+
+.form-wrapper {
+  margin: 0 auto 20px auto;
+}
+
+.form-wrapper form {
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+}
+
+.form-wrapper form * {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+}
+
+.form-wrapper form h2 {
+  margin-bottom: 20px;
+  width: fit-content;
+  color: var(--white) ;
+}
+
+.form-wrapper form p {
+  margin-top: 10px;
+  color: var(--white);
+  font-size: 1.2em;
+}
+
+.form-wrapper form p a {
+  background-color: slateblue;
+  margin-top: 10px;
+  display: inline-block;
+  padding: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+}
+
+.form-wrapper .error-message {
+  margin-top: 20px;
+  width: 400px;
+  max-width: 50vw;
+  color: var(--white);
+  font-size: 1.2em;
+  font-weight: 500;
+  animation: bounce 0.5s;
+}
+
+.form-wrapper form p a:hover{
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(00,00,00,0);
+  box-shadow: 2px 2px 3px 0px rgba(00,00,00,0);
+}
+
+.form-wrapper form input, textarea {
+  width: 400px;
+  max-width: 80vw;
+  padding: 0.375rem .75rem;
+  border-radius: 0.25rem;
+  line-height: 1.5;
+  font-size: 1.2em;
+  font-weight: 400;
+  background-clip: padding-box;
+  border: 1px solid #7990a7;
+  appearance: none;
+  -webkit-appearance: none;
+  margin-top: 12px;
+}
+
+.form-wrapper form select {
+  width: 400px;
+  max-width: 80vw;
+  padding: 0.375rem .75rem;
+  border-radius: 0.25rem;
+  line-height: 1.5;
+  font-size: 1.2em;
+  font-weight: 400;
+  background-clip: padding-box;
+  border: 1px solid #7990a7;
+  margin-top: 12px;
+}
+
+.form-wrapper form textarea {
+  resize: none;
+}
+
+.form-wrapper form input:focus, textarea:focus, select:focus {
+  outline: none;
+}
+
+.form-button{
+  color:var(--white);
+  line-height: 1.5;
+  font-size: 1.4em;
+  font-weight: 500;
+  width: 200px;
+  max-width: 60vw;
+  padding: 12px;
+  background-clip: padding-box;
+  appearance: none;
+  -webkit-appearance: none;
+  background: #00c9b7;
+  -webkit-box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  box-shadow: 2px 2px 3px 0px rgba(00,00,00,0.2);
+  border-radius: 25px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.form-button:hover{
+  box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0);
+}
+
+
+
+
+
+@-webkit-keyframes bounce {
+  from,
+  20%,
+  53%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  40%,
+  43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0) scaleY(1.1);
+    transform: translate3d(0, -30px, 0) scaleY(1.1);
+  }
+
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0) scaleY(1.05);
+    transform: translate3d(0, -15px, 0) scaleY(1.05);
+  }
+
+  80% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0) scaleY(0.95);
+    transform: translate3d(0, 0, 0) scaleY(0.95);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0) scaleY(1.02);
+    transform: translate3d(0, -4px, 0) scaleY(1.02);
+  }
+}
+
+@keyframes bounce {
+  from,
+  20%,
+  53%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  40%,
+  43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0) scaleY(1.1);
+    transform: translate3d(0, -30px, 0) scaleY(1.1);
+  }
+
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0) scaleY(1.05);
+    transform: translate3d(0, -15px, 0) scaleY(1.05);
+  }
+
+  80% {
+    -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0) scaleY(0.95);
+    transform: translate3d(0, 0, 0) scaleY(0.95);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0) scaleY(1.02);
+    transform: translate3d(0, -4px, 0) scaleY(1.02);
+  }
+}
+
+@-webkit-keyframes slideInRight {
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slide {
+  0% {margin-top:-300px;}
+  5% {margin-top:-200px;}
+  33% {margin-top:-200px;}
+  38% {margin-top:-100px;}
+  66% {margin-top:-100px;}
+  71% {margin-top:0px;}
+  100% {margin-top:0px;}
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+
+}
+
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+  }
+}
