feat: ajoute le composant coursDuJour

--- a/pepal-front/src/app/shared/components/header/nav-item/nav-item.component.html
+++ b/pepal-front/src/app/shared/components/header/nav-item/nav-item.component.html
@@ -1,1 +1,5 @@
-<li><a [href]="item.link">{{item.title}} <span *ngIf="item.badge" class="badge bg-danger">{{item.badge}}</span> </a></li>
+<li>
+  <a [routerLink]="item.link" routerLinkActive="active">{{item.title}}
+    <span *ngIf="item.badge" class="badge bg-danger">{{item.badge}}</span>
+  </a>
+</li>
