--- a/pepal-front/src/styles.scss
+++ b/pepal-front/src/styles.scss
@@ -1,6 +1,6 @@
 /* general */
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Itim&family=Open+Sans&family=Pacifico&family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 :root {
   --orange-transparent: #ff821cc7;
   --white: #FBFAFC;
