--- a/pepal-front/src/app/app.component.html
+++ b/pepal-front/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="bgGradient dark" style="display: none;" id="darkGradient"></div>
 <div class="bgGradient gradient-orange" id="subGradient"></div>
 <div class="bgGradient gradient-blue" id='topGradient'></div>
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="wrap-outer">
+  <div class="wrap">
+    <app-header></app-header>
+    <main class="container">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+</div>
