--- a/pepal-front/src/app/chatroom/components/room/room.component.html
+++ b/pepal-front/src/app/chatroom/components/room/room.component.html
@@ -1,12 +1,5 @@
-<div class="container-fluid">
-  <form [formGroup]="conversationFormGroup" (ngSubmit)="getOrcreateConversation()">
-    <div class="form-group">
-      <label>Conversation Name</label>
-      <input type="text" class="form-control" placeholder="abcd" formControlName="name">
-    </div>
-    <button class="btn btn-primary" type="submit" [disabled]="!conversationFormGroup.valid" title="Get Or Create Conversation">GetOrCreateConversation</button>
-  </form>
-  <div>
+<div>
+  <div class="container-fluid row col">
     <div id="remote-container">
     </div>
     <div id="local-container">
