--- a/pepal-front/src/app/cours/components/cours-du-jour/cours-du-jour.component.html
+++ b/pepal-front/src/app/cours/components/cours-du-jour/cours-du-jour.component.html
@@ -23,6 +23,6 @@
     </tr>
   </table>
   <div class="on-air link">
-    <a href="#"><i class="fas fa-circle" style="color: rgb(238, 24, 24);"></i>Rejoindre le cours </a>
+    <a [routerLink]="['/room', 'room-1']"><i class="fas fa-circle" style="color: rgb(238, 24, 24);"></i>Rejoindre le cours </a>
   </div>
 </div>
