--- a/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.html
+++ b/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.html
@@ -2,4 +2,5 @@
   <app-card-next></app-card-next>
   <app-absences></app-absences>
   <app-notes></app-notes>
+  <app-rendus style='grid-area: 2 / 1 / 3 / 3'></app-rendus>
 </div>
