--- a/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.html
+++ b/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="cours-panel">
   <app-card-next></app-card-next>
-  <app-absences></app-absences>
+  <app-rendus></app-rendus>
   <app-notes></app-notes>
-  <app-rendus style='grid-area: 2 / 1 / 3 / 3'></app-rendus>
+  <app-absences></app-absences>
 </div>
