mise à jour des styles et intégration du composant actus à la page

--- a/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.html
+++ b/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="cours-panel">
+  <app-actus></app-actus>
   <app-card-next></app-card-next>
   <app-rendus></app-rendus>
   <app-notes></app-notes>
