--- a/pepal-front/src/styles.scss
+++ b/pepal-front/src/styles.scss
@@ -4,6 +4,7 @@
 :root {
   --orange-transparent: #ff821cc7;
   --white: #FBFAFC;
+  --blue: #0a58ca;
   --turquoise: #2FFFAD;
   --violet: #845EC2;
 
