--- a/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.scss
+++ b/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.scss
@@ -6,7 +6,28 @@
   margin: auto;
   gap: 2em;
 
+  app-actus {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+
+  app-card-next {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
   app-rendus {
     grid-area: 2 / 1 / 3 / 3;
+  }
+
+  app-notes {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  app-absences {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+
+  @media handheld, (max-width: 800px) {
+    display: flex;
+    flex-direction: column;
   }
 }
