feat: ajoute les card rendu, infos (#6)
Co-authored-by: Charron Théo <2t0h0e2o@gmail.com>

--- a/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.html
+++ b/pepal-front/src/app/cours/components/cours-dashboard/cours-dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="cours-panel">
+  <app-actus></app-actus>
   <app-card-next></app-card-next>
-  <app-absences></app-absences>
+  <app-rendus></app-rendus>
   <app-notes></app-notes>
+  <app-absences></app-absences>
 </div>
