--- a/pepal-front/src/app/cours/components/actus/actus.component.scss
+++ b/pepal-front/src/app/cours/components/actus/actus.component.scss
@@ -1,4 +1,4 @@
-.absences-card{
+.actus-card{
     position: relative;
     margin: auto;
     height: 200px;
@@ -15,6 +15,15 @@ h2 {
     font-size: 1.8em;
     font-weight: 700;
     color: var(--white);
-    text-shadow:1px 2px 0 rgba(137, 137, 153, 0.562);
+    text-shadow: 1px 2px 0 rgba(137, 137, 153, 0.562);
+    margin-bottom: 0.5em;
+}
+
+h3 {
+    font-family: 'Inter', sans-serif;
+    font-size: 1.3em;
+    font-weight: 600;
+    color: var(--white);
+    text-shadow: 1px 2px 0 rgba(137, 137, 153, 0.562);
     margin-bottom: 0.5em;
 }
