feat: ajoute le toaster d'appel

--- a/pepal-front/src/styles.scss
+++ b/pepal-front/src/styles.scss
@@ -1,3 +1,7 @@
+@import "../node_modules/primeng/resources/themes/nova/theme.css";
+@import "../node_modules/primeng/resources/primeng.css";
+@import "../node_modules/primeicons/primeicons.css";
+
 /* general */
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Itim&family=Open+Sans&family=Pacifico&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
