--- a/pepal-front/src/app/app.component.html
+++ b/pepal-front/src/app/app.component.html
@@ -6,6 +6,23 @@
     <app-header></app-header>
     <main class="container">
       <router-outlet></router-outlet>
+      <button type="button" pButton pRipple (click)="showConfirm()" label="Confirm" class="ui-button-warning"></button>
+
+      <p-toast position="bottom-center" key="c" (onClose)="onReject()" [baseZIndex]="5000">
+        <ng-template let-message pTemplate="message">
+          <div class="p-flex p-flex-column" style="flex: 1">
+            <div class="p-text-center">
+              <h4><i class="fas fa-bell"></i> {{message.summary}}</h4>
+              <p>{{message.detail}}</p>
+            </div>
+            <div class="p-grid p-fluid">
+              <div class="p-col-6">
+                <button type="button" pButton (click)="onConfirm()" label="Répondre présent" class="p-button-success"></button>
+              </div>
+            </div>
+          </div>
+        </ng-template>
+      </p-toast>
     </main>
   </div>
 </div>
