feat: modifications mineures
 * centrage des vidéos de la chatroom
 * diminution du temps d'affichage de la popup de confirmation d'appel

--- a/pepal-front/src/app/chatroom/components/room/room.component.html
+++ b/pepal-front/src/app/chatroom/components/room/room.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="container-fluid row col">
+  <div class="d-flex justify-content-center">
     <div id="remote-container">
     </div>
     <div id="local-container">
